--- a/client/src/components/shared/NavLinks/NavLinks.css
+++ b/client/src/components/shared/NavLinks/NavLinks.css
@@ -176,7 +176,7 @@
   font-weight: bold;
 }
 
-.nav-links li .logout {
+/* .nav-links li .logout {
   position: absolute;
   left: -0.3cm;
   width: 6.5cm;
@@ -187,7 +187,7 @@
   padding: 0.4rem;
   list-style-type: none;
   font-weight: bold;
-}
+} */
 
 .nav-links li .customer {
   position: absolute;
@@ -214,19 +214,7 @@
   font-weight: bold;
 }
 
-/* .nav-links li .kitchenpage {
-  position: absolute;
-  overflow: hidden;
-  left: -0.3cm;
-  width:6.5cm;
-  text-align: left;
-  font-size: 22px;
-  top: 22cm;
-  margin: 1rem;
-  padding: 0.4rem;
-  list-style-type: none;
-  font-weight: bold;
-} */
+
 
 .nav-links li .notification {
 
@@ -236,6 +224,19 @@
   text-align: left;
   font-size: 22px;
   top: 4.5cm;
+  margin: 1rem;
+  padding: 0.4rem;
+  list-style-type: none;
+  font-weight: bold;
+}
+.nav-links li .kitchen_chat {
+  position: absolute;
+  overflow: hidden;
+  left: -0.3cm;
+  width:6.5cm;
+  text-align: left;
+  font-size: 22px;
+  top: 6cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
@@ -254,13 +255,25 @@
   list-style-type: none;
   font-weight: bold;
 }
-.nav-links li .Waiter_notification {
+.nav-links li .waiter_notification {
   position: absolute;
   left: -0.3cm;
   width: 6.5cm;
   text-align: left;
   font-size: 22px;
   top: 4.5cm;
+  margin: 1rem;
+  padding: 0.4rem;
+  list-style-type: none;
+  font-weight: bold;
+}
+.nav-links li .waiter_chat {
+  position: absolute;
+  left: -0.3cm;
+  width: 6.5cm;
+  text-align: left;
+  font-size: 22px;
+  top: 6cm;
   margin: 1rem;
   padding: 0.4rem;
   list-style-type: none;
