--- a/client/src/css/WaiterStyle.css
+++ b/client/src/css/WaiterStyle.css
@@ -1,3 +1,18 @@
+/*Place order page css*/
+.waiter_home_style{
+  margin-top: 7rem;
+}
+/* .waiterhome_card_style{
+  margin-top: 40px;
+  
+  background-color: #ca4483ea;
+  margin-right: 30px;
+  font-size: 50px;
+  margin-left: 30px;
+} */
+
+
+
 /* notification page css */
 .container-fluid {
     margin-top: 20px;
@@ -11,4 +26,113 @@
   .notCard {
     box-shadow: 5px 5px 8px 10px rgba(241, 241, 239, 0.945) !important;
   }
-  
+  /*waiterchat page css*/
+  .chatStyle{
+    margin: 3rem; 
+    margin-left: 3px;
+    /* border-style: groove;
+    border-width: 3px; */
+    width: 45%;
+    /* border-radius: 7px; */
+    height: 100%;
+}
+.chatbox-Design{
+    color: white;
+    margin: 5rem;
+    margin-left: 3rem;
+    height: 100%;
+    width: 100%;
+    
+}
+.card{
+    width: 100%;
+    max-height: 100rem;
+    color: White;
+    font-family: Times New Roman, Times, serif;
+    margin: 2rem;
+    border-style: groove;
+    border-width: 3px;
+    border-radius: 7px;
+   
+} 
+.msgbtn{
+    background-color: #d11d72;
+    cursor: pointer;
+    border: 2px solid black;
+    border-radius: 6px;
+    height: 25px;
+    line-height: 1.0;
+    color: white;
+}
+.row .Container {
+    background-color:white;
+    height: 300px;
+    padding: 15px;
+    display: block;
+    overflow-y: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 23px;
+ }
+ .row .Container .message{
+     background-color:#1F305E;
+     line-height: 1.0;
+     padding: 10px;
+     margin: 10px;
+     font-weight: bolder;
+     border: 0px solid black;
+ }
+ .chatcolumn{
+     background-color:#1F305E;  
+     margin: 1rem;
+     font-weight: bolder;
+     margin-left: 3px; 
+ }
+ .left{
+     float: left;
+     min-height: 50px;
+     border-bottom-left-radius: 25px;
+   
+     height: 50px;
+     clear: both;
+ }
+ .right{
+     float: right;
+     min-height: 50px;
+     border-bottom-right-radius: 25px;
+     height: 50px;
+     clear: both;
+ }
+ #send-container{
+     text-align: center;
+     max-width: 985px;
+     width: 100%;
+     display: block;
+     margin: auto;
+ }
+ #msgimp{
+     width:50%;
+     border: 2px solid black;
+     border-radius: 6px;
+     margin: 8px;
+     margin-bottom: 30px;
+     height: 35px;
+ }
+ .kitchen_notification{
+    margin-top: 6rem;
+}
+.notification_card_body{
+  color: #fff;
+  border: 2px solid black;
+  border-radius: 7px;
+  background-color: #1F305E;
+  height: 40px;
+  vertical-align: center;
+  font-size: 1.4em;
+  font-weight: bolder,
+}
+.card_badge_style{
+  background-color: #d11d72;
+  font-size: 1.5rem;
+}
