--- a/client/src/css/BillerStyle.css
+++ b/client/src/css/BillerStyle.css
@@ -115,7 +115,7 @@
     width: 100%;
     
 }
-.card{
+/* .card{
     width: 100%;
     max-height: 100rem;
     color: White;
@@ -125,7 +125,7 @@
     border-width: 3px;
     border-radius: 7px;
    
-} 
+}  */
 .row .Container {
     background-color:white;
     height: 300px;
