--- a/client/src/css/BillerStyle.css
+++ b/client/src/css/BillerStyle.css
@@ -8,7 +8,9 @@
     margin: 0%;
 } */
 .biller_home_style{
-    margin: 3rem;
+    margin-top: 5rem;
+    margin-left: 3rem;
+    margin-right: 0rem;
 }
 .btn_table{
     background-color: #d11d72;
@@ -18,23 +20,15 @@
     line-height: 1.0;
     color: white;
 }
-.chart{
-    margin-left: 12%;
-    margin-right: 15%;
-    /* display: flex; */
-    /* position: absolute; */
-    /* background-color:#0a2351; */
-    justify-content: center;
-    width: 250px;
-    height: 150px;
-    
+
+.cardstyle{
+    height: 152px;
+    width: 300px;
 }
-/* .cardstyle{
-    margin-left: 2rem;
-} */
 .cardsname{
     max-width: 80%;
-    max-height: 100rem;
+    height: 150px;
+    /* max-height: 100rem; */
     color: white;
     background-color: rgb(10,35,81);
     font-family: "Times New Roman, Times, serif";
@@ -57,18 +51,25 @@
 }
 .chartcard{
     background-color:#1F305E;
-   width:20%;
-   height: 50%;
+   width: fit-content;
+   height: 150px;
     color: white;
     font-family: "Times New Roman, Times, serif";
-    
+    margin-left: 2rem;
     justify-content: center;
-     border-style: "groove";
+     border-style: groove;
     border-width: "3px";
       border-radius: "7px";
                
 }
-
+.chart{
+    /* margin-left: 12%;
+    margin-right: 15%; */
+    justify-content: center;
+    width: 240px;
+    height: 110px;
+    
+}
 
 .table-bordered td {
     border: 0px;
@@ -86,11 +87,13 @@
 
 .Tabledesign{   
     color: white;
-    width:90%;
+    /* width:100%; */
+    font-weight: bolder;
+    font-size: 20px;
     max-height: 100rem;
     font-family: "Times New Roman, Times, serif";
     margin-top: 2rem;
-    margin-left: 3.5rem;
+    /* margin-left: 3.5rem; */
     border-width: 3px;
     border-radius: 20px;
     border-collapse: "collapse";
