--- a/client/src/css/KitchenStyle.css
+++ b/client/src/css/KitchenStyle.css
@@ -155,7 +155,7 @@
     width: 100%;
     
 }
-.card{
+/* .card{
     width: 100%;
     max-height: 100rem;
     color: White;
@@ -165,7 +165,7 @@
     border-width: 3px;
     border-radius: 7px;
    
-} 
+}  */
 .msgbtn{
     background-color: #d11d72;
     cursor: pointer;
