--- a/client/src/components/shared/NavBar/NavBar.css
+++ b/client/src/components/shared/NavBar/NavBar.css
@@ -1,12 +1,24 @@
 .navbar {
   width: 100%;
+ 
+ align-items: center;
+ justify-content: center;
   background-color:#1F305E;
-  height: 3rem;
+  height: 4rem;
   position: fixed;
   overflow: hidden;
   padding-left: 0;
 }
 .logoutbtn{
+  align-self: auto;
+  margin-left: 550px;
   display: block;
   right: 0px;
+  top: 5px;
+}
+.dashboard_name{
+  text-align: right;
+  margin-left: 700px;
+  font-size: 20px;
+  color: #fff;
 }
