--- a/client/src/css/WaiterStyle.css
+++ b/client/src/css/WaiterStyle.css
@@ -18,10 +18,16 @@
   background-color: #d11d72;
   margin-top: 3rem;
   margin-left: 2rem;
+  padding: 10px;
+  padding-left: 17px;
+  padding-right: 17px;
 }
 .place_order_back_btn{
   background-color: #d11d72;
   display:inline-block;
+  padding: 10px;
+  padding-left: 17px;
+  padding-right: 17px;
   margin-top:2rem;
   /* margin-left: 2rem; */
 }
